bugfix add js-scrollbar for chat

--- a/app/css/pages/profile/chat.scss
+++ b/app/css/pages/profile/chat.scss
@@ -67,27 +67,29 @@
   }
 
   &__users {
+    position: relative;
     margin-top: 10px;
     min-height: 961px;
     max-height: 961px;
-    overflow-y: auto;
-    /* Works on Firefox */
-    scrollbar-width: thin;
-    scrollbar-color: #DAE4ED transparent;
-    /* Works on Chrome, Edge, and Safari */
-    &::-webkit-scrollbar {
-      width: 5px;
-      height: 66px;
-    }
+    //FIXME: Delete if not-use
+    //overflow-y: auto;
+    ///* Works on Firefox */
+    //scrollbar-width: thin;
+    //scrollbar-color: #DAE4ED transparent;
+    ///* Works on Chrome, Edge, and Safari */
+    //&::-webkit-scrollbar {
+    //  width: 5px;
+    //  height: 66px;
+    //}
 
-    &::-webkit-scrollbar-track {
-      background: transparent;
-    }
-
-    &::-webkit-scrollbar-thumb {
-      background: #DAE4ED;
-      border-radius: 5px;
-    }
+    //&::-webkit-scrollbar-track {
+    //  background: transparent;
+    //}
+    //
+    //&::-webkit-scrollbar-thumb {
+    //  background: #DAE4ED;
+    //  border-radius: 5px;
+    //}
 
     @include mobile {
       margin-top: 0;
@@ -95,5 +97,23 @@
       max-height: 615px;
     }
 
+  }
+
+  .ps__thumb-y {
+    background-color: $color-gray!important;
+    border-radius: 5px;
+    opacity: 1;
+  }
+
+  .ps__rail-x, .ps__rail-y {
+    opacity: 1;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+
+  .ps:hover>.ps__rail-y {
+    opacity: 1;
   }
 }
