--- a/app/css/pages/profile/chat/chat-form.scss
+++ b/app/css/pages/profile/chat/chat-form.scss
@@ -1,7 +1,7 @@
 .chat-form {
   position: relative;
   &__group {
-    margin-top: 12px;
+    margin-top: 9px;
     display: flex;
     justify-content: space-between;
     align-items: center;
